# injectx

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yaml
cmake/presets/: base.json
cmake/vcpkg/: vcpkg.toolchain.cmake
cmake/vcpkg/bootstrap/: vcpkg-config.cmake  vcpkg_autodetect_target_triplet.cmake  vcpkg_bootstrap.cmake  vcpkg_configure.cmake
src/: CMakeLists.txt
src/cli/: CMakeLists.txt
src/cli/src/: main.cpp
src/cmake/: add_injectx_executable.cmake  add_injectx_module.cmake  injectx-config.cmake  injectx-install-targets.cmake  set_injectx_target_properties.cmake
src/core/: CMakeLists.txt
src/core/include/injectx/core/: bundle.hpp  dependency_container.hpp  dependency_info.hpp  launch.hpp  manifest.hpp  module.hpp  setup_concepts.hpp  setup_task.hpp  setup_traits.hpp  version.hpp
src/core/src/: launch.cpp  version.cpp
src/stdext/: CMakeLists.txt
src/stdext/include/injectx/stdext/: coroutine.hpp  expected.hpp  expects.hpp  function_traits.hpp  generator.hpp  monadics.hpp  source_location.hpp  static_assert.hpp  static_format.hpp  static_map.hpp  static_queue.hpp  static_string.hpp  type_name.hpp
src/stdext/include/injectx/stdext/concepts/: is_any_of.hpp
src/stdext/include/injectx/stdext/coro/: concepts.hpp  promise.hpp  task.hpp
src/stdext/include/injectx/stdext/details/: source_location.hpp
src/stdext/include/injectx/stdext/monadics/: and_then.hpp  or_else.hpp  pipe.hpp  transform.hpp  transform_error.hpp
src/stdext/include/injectx/stdext/ranges/: aliases.hpp
src/stdext/include/injectx/stdext/ranges/views/: enumerate.hpp
src/stdext/src/: expects.cpp
src/stdext/src/coro/: promise.cpp
tests/: CMakeLists.txt
tests/cmake/: add_injectx_test.cmake
tests/core/: CMakeLists.txt  bundle_test.cpp  dependency_container_test.cpp  launch_test.cpp  manifest_test.cpp  module_test.cpp  setup_concepts_test.cpp  setup_task_test.cpp  setup_traits_test.cpp  version_test.cpp
tests/stdext/: CMakeLists.txt  coroutine_test.cpp  expected_monadics_test.cpp  expected_test.cpp  function_traits_test.cpp  generator_test.cpp  source_location_test.cpp  static_assert_test.cpp  static_format_test.cpp  static_map_test.cpp  static_queue_test.cpp  static_string_test.cpp  type_name_test.cpp
tests/stdext/concepts/: CMakeLists.txt  is_any_of_test.cpp
tests/stdext/coro/: CMakeLists.txt  concepts_test.cpp  task_test.cpp
tests/stdext/details/: CMakeLists.txt  source_location_test.cpp
tests/stdext/expects/: CMakeLists.txt  fail_constexpr_test.cpp  fail_runtime_test.cpp  success_test.cpp  windows_supress_abort_dialog.cpp
tests/stdext/monadics/: CMakeLists.txt  and_then_test.cpp  or_else_test.cpp  pipe_test.cpp  transform_error_test.cpp  transform_test.cpp
tests/stdext/ranges/views/: CMakeLists.txt  enumerate_test.cpp
tests/stdext/static_assert/: CMakeLists.txt  fail_test.cpp  success_test.cpp
